--- a/FtcRobotController/src/main/res/xml/app_settings.xml
+++ b/FtcRobotController/src/main/res/xml/app_settings.xml
@@ -38,51 +38,56 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 See https://developer.android.com/guide/topics/ui/settings.html
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".FtcRobotControllerActivity">
+<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
+                  xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  tools:context=".FtcRobotControllerActivity">
 
-    <PreferenceCategory android:title="@string/prefcat_configure_robot">
+  <PreferenceCategory
+    android:title="@string/prefcat_configure_robot">
 
-        <EditTextPreference
-            android:defaultValue=""
-            android:key="@string/pref_device_name"
-            android:summary="@string/prefedit_device_name_summary_rc"
-            android:title="@string/prefedit_device_name_rc" />
+    <EditTextPreference
+        android:title="@string/prefedit_device_name_rc"
+        android:summary="@string/prefedit_device_name_summary_rc"
+        android:key="@string/pref_device_name"
+        android:defaultValue=""
+        />
 
-        <org.firstinspires.ftc.robotcore.internal.ui.ColorListPreference
-            android:entries="@array/app_theme_names"
-            android:entryValues="@array/app_theme_tokens"
-            android:key="@string/pref_app_theme"
-            android:summary="@string/prefedit_app_theme_summary_rc"
-            android:title="@string/prefedit_app_theme_rc"
-            app:colors="@array/app_theme_colors" />
+    <org.firstinspires.ftc.robotcore.internal.ui.ColorListPreference
+        android:title="@string/prefedit_app_theme_rc"
+        android:summary="@string/prefedit_app_theme_summary_rc"
+        android:key="@string/pref_app_theme"
+        android:entries="@array/app_theme_names"
+        android:entryValues="@array/app_theme_tokens"
+        app:colors="@array/app_theme_colors"
+        />
 
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="@string/pref_sound_on_off"
-            android:summary="@string/prefedit_sound_on_off_summary"
-            android:title="@string/prefedit_sound_on_off" />
+    <SwitchPreference
+        android:title="@string/prefedit_sound_on_off"
+        android:summary="@string/prefedit_sound_on_off_summary"
+        android:key="@string/pref_sound_on_off"
+        android:defaultValue="true"
+        />
 
-        <PreferenceScreen
-            android:key="@string/pref_launch_advanced_rc_settings"
-            android:summary="@string/summaryAdvancedRCSettings"
-            android:title="@string/titleAdvancedRCSettings">
-            <intent
-                android:targetClass="com.qualcomm.ftccommon.FtcAdvancedRCSettingsActivity"
-                android:targetPackage="@string/packageName" />
-        </PreferenceScreen>
+    <PreferenceScreen
+        android:title="@string/titleAdvancedRCSettings"
+        android:summary="@string/summaryAdvancedRCSettings"
+        android:key="@string/pref_launch_advanced_rc_settings">
+        <intent
+            android:targetPackage="@string/packageName"
+            android:targetClass="com.qualcomm.ftccommon.FtcAdvancedRCSettingsActivity"
+            />
+    </PreferenceScreen>
 
-        <PreferenceScreen
-            android:key="@string/pref_launch_viewlogs"
-            android:summary="@string/prefedit_view_logs_summary"
-            android:title="@string/prefedit_view_logs">
-            <intent
-                android:targetClass="com.qualcomm.ftccommon.ViewLogsActivity"
-                android:targetPackage="@string/packageName" />
-        </PreferenceScreen>
+    <PreferenceScreen
+        android:title="@string/prefedit_view_logs"
+        android:summary="@string/prefedit_view_logs_summary"
+        android:key="@string/pref_launch_viewlogs">
+      <intent
+        android:targetPackage="@string/packageName"
+        android:targetClass="com.qualcomm.ftccommon.ViewLogsActivity" />
+    </PreferenceScreen>
 
-    </PreferenceCategory>
+  </PreferenceCategory>
 
 </PreferenceScreen>
